[feat] : Adicionei Cache em métodos store